Add novo parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,8 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sint blanditiis, error dicta magni nam ad rerum repellendus distinctio illo natus ea nesciunt autem dignissimos, quos earum, minus cupiditate necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos facere ad corporis incidunt enim velit non repellendus, vero accusantium. Aliquam nam nemo molestias commodi impedit cumque labore harum explicabo voluptates.</p>
+    
     
 </body>
 </html>
